--- a/src/com/bmazurkiewicz01/client/css/changeDialog.css
+++ b/src/com/bmazurkiewicz01/client/css/changeDialog.css
@@ -18,7 +18,7 @@
 .cancelButton:hover {
     -fx-background-color: #ff4444;
 }
-.textField {
+.changeField {
     -fx-background-color: #00000025;
     -fx-background-radius: 25;
     -fx-text-fill: #a9a9a9;
