Added animated left pane in room view

--- a/src/com/bmazurkiewicz01/client/css/appStyle.css
+++ b/src/com/bmazurkiewicz01/client/css/appStyle.css
@@ -14,3 +14,17 @@
 .minimizeButton:hover {
     -fx-image: url("../resources/minimizeIconHover.png");
 }
+.hamburgerButton {
+    -fx-background-color: transparent;
+    -fx-background-image: url("../resources/hamburgerIcon.png");
+    -fx-background-size: 32px 32px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center;
+}
+.hamburgerButton:hover {
+    -fx-background-image: url("../resources/hamburgerIconHover.png");
+}
+.leftPane {
+    -fx-background-color: rgba(51, 51, 51, 0.6);
+    -fx-background-radius: 0 25 25 0;
+}
