--- a/src/com/bmazurkiewicz01/client/css/roomStyle.css
+++ b/src/com/bmazurkiewicz01/client/css/roomStyle.css
@@ -73,13 +73,27 @@
 .chatTextArea .scroll-pane .content{
     -fx-background-color: transparent;
 }
-
-.goBackButton, .logoutButton {
-    -fx-background-color: #ff5f50;
-    -fx-background-radius: 25;
+.logoutButton {
+    -fx-background-color: rgba(0, 0, 0, 0.05);
+    -fx-background-image: url("../resources/logoutIcon.png");
+    -fx-background-size: 32px 32px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: left;
+    -fx-text-fill: white;
 }
-.goBackButton:hover, .logoutButton:hover {
-    -fx-background-color: #ff6b5c;
+.logoutButton:hover {
+    -fx-background-color: rgba(0, 0, 0, 0.25);
+}
+.goBackButton {
+    -fx-background-color: rgba(0, 0, 0, 0.05);
+    -fx-background-image: url("../resources/backIcon.png");
+    -fx-background-size: 32px 32px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: left;
+    -fx-text-fill: white;
+}
+.goBackButton:hover {
+    -fx-background-color: rgba(0, 0, 0, 0.25);
 }
 .sendMessageButton {
     -fx-background-color: transparent;
