--- a/src/com/bmazurkiewicz01/client/view/main.fxml
+++ b/src/com/bmazurkiewicz01/client/view/main.fxml
@@ -44,7 +44,7 @@
     </TableView>
     <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0"
                styleClass="minimizeButton">
-        <Image url="@../resources/minimizeIcon.png"/>
+        <Image url="@../../../../resources/minimize_icon.png"/>
     </ImageView>
     <Label fx:id="helloLabel" alignment="CENTER" layoutX="276.0" layoutY="11.0" prefHeight="58.0" prefWidth="227.0"
            styleClass="helloLabel" text="Hello, User!">
@@ -54,7 +54,7 @@
     </Label>
     <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0"
                styleClass="closeButton">
-        <Image url="@../resources/closeIcon.png"/>
+        <Image url="@../../../../resources/close_icon.png"/>
     </ImageView>
     <Label fx:id="errorLabel" layoutX="190.0" layoutY="558.0" prefHeight="27.0" prefWidth="420.0"
            style="-fx-text-alignment: center; -fx-alignment: center;" text="Label" textFill="RED" visible="false">
