--- a/src/com/bmazurkiewicz01/client/view/userPropertiesValidation.fxml
+++ b/src/com/bmazurkiewicz01/client/view/userPropertiesValidation.fxml
@@ -41,7 +41,7 @@
         <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="303.0" layoutY="16.0"
                    styleClass="closeButton">
             <image>
-                <Image url="@../resources/closeIcon.png"/>
+                <Image url="@../../../../resources/close_icon.png"/>
             </image>
         </ImageView>
         <Label fx:id="errorLabel" alignment="CENTER" layoutX="42.0" layoutY="152.0" minWidth="-Infinity"
